--- a/src/public/css/admin.css
+++ b/src/public/css/admin.css
@@ -40,7 +40,10 @@ h3 {
     width: 80%;
     height: 40px;
     text-align: center;
-    /* background: blue; */
+}
+
+.search-form__reset {
+    height: 40px;
 }
 
 .search-form__item--keyword {
@@ -65,13 +68,15 @@ h3 {
 
 .admin__pagination {
     width: 80%;
-    margin: 0 auto;
+    margin:  30px auto 0;
+    padding: 0;
 }
 
-/* .admin__pagination ul {
+.admin__pagination ul {
+    display: flex;
+    justify-content: right;
     margin: 0;
-    padding: 0;
-} */
+}
 
 .admin__pagination li {
     width: 30px;
@@ -85,7 +90,7 @@ h3 {
 }
 
 .admin-table {
-    margin: 30px auto;
+    margin: 20px auto;
     width: 80%;
     border-collapse: collapse;
 }
@@ -140,8 +145,3 @@ h3 {
 .admin-table__row input {
     width: 100%;
 }
-
-
-/* .admin-table__input--name {
-    /* width: 20%; */
-
