--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -60,6 +60,21 @@ h3 {
     margin-bottom: 30px;
 }
 
+.error-message {
+    width: 100%;
+    text-align: left;
+}
+
+.error-message ul {
+    padding: 0 10%;
+    margin:0;
+}
+
+.error-message li {
+    list-style: none;
+    color: red;
+}
+
 .login-button{
     width: 100%;
     margin-top: 50px;
